Fix component overview spacing
- Removed anchor menu from overview page

--- a/src/app/components/page/page.component.scss
+++ b/src/app/components/page/page.component.scss
@@ -102,7 +102,10 @@
       }
     }
     
-    .lead-text-section + .sdds-images {
+    .lead-text-section + .sdds-images,
+    .lead-text-section + .sdds-multi-col-plugin,
+    .sdds-multi-col-plugin h4,
+    .sdds-multi-col-plugin .section-title {
       margin-top: var(--sdds-spacing-element-32);
     }
 
